packages/svelte/tests/compiler-errors/samples/malformed-snippet-2/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'expected_token',
		message: 'Expected token )',
		position: [31, 31]
	}
});
